--- a/views/index.twig
+++ b/views/index.twig
@@ -6,6 +6,23 @@
     <title>MeteoExpress - {{ pageName }}</title>
 </head>
 <body>
+    <nav>
+        <form>
+            <input type="search" name="searchbar" placeholder="Search">
+            <input type="submit" value="Go">
+        </form>
+    </nav>
     <h1>{{ message }}</h1>
+    <main id="main">
+        <form id="addForm">
+            <input type="text" id="town-name" name="town-name" placeholder="Nom de la ville" required>
+            <input type="number" step="0.000000000001" id="town-lat" name="town-lat" placeholder="Latitude" required>
+            <input type="number" step="0.000000000001" id="town-lon" name="town-lon" placeholder="Longitude" required>
+            <input type="submit" value="Ajouter">
+        </form>
+
+    </main>
+
+    <script type="text/javascript" src="http://localhost:4000/library.js"></script>
 </body>
 </html>
