--- a/views/index.twig
+++ b/views/index.twig
@@ -8,8 +8,7 @@
 <body>
     <nav>
         <form>
-            <input type="search" name="searchbar" placeholder="Search">
-            <input type="submit" value="Go">
+            <input type="search" name="searchbar" id="search" placeholder="Search" oninput="searchVille()">
         </form>
     </nav>
     <h1>{{ message }}</h1>
