--- a/views/index.twig
+++ b/views/index.twig
@@ -7,6 +7,7 @@
 </head>
 <body>
     <nav>
+        <a href="/">Accueil</a>
         <form>
             <input type="search" name="searchbar" id="search" placeholder="Search" oninput="searchVille()">
         </form>
