--- a/views/index.twig
+++ b/views/index.twig
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MeteoExpress - {{ pageName }}</title>
+    <link rel="stylesheet" href="/style/index.css">
 </head>
 <body>
     <nav>
@@ -20,6 +21,8 @@
             <input type="number" step="0.000000000001" id="town-lon" name="town-lon" placeholder="Longitude" required>
             <input type="submit" value="Ajouter">
         </form>
+        <div id="cards">
+        </div>
     </main>
 
     <script type="text/javascript" src="http://localhost:4000/library.js"></script>
